# ThreeVarBasicSymmPolynomical

./: Cargo.toml  README.md
src/: lib.rs  math.rs
